# Ace-Step-1.5-Dataset-Manager

./: CMakeLists.txt  README.md
src/: audioitemwidget.cpp  audioitemwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  plaintextedit.cpp  plaintextedit.h  resizabletextedit.cpp  resizabletextedit.h
